<resources>
    <string name="app_name">Halino</string>
    <string name="let_s_pick_up_where_you_left_off">Let\'s pick up where you left off.</string>
    <string name="how_are_you">How are you?</string>
    <string name="rad">rad</string>
    <string name="good">good</string>
    <string name="meh">meh</string>
    <string name="bad">bad</string>
    <string name="awful">awful</string>
    <string name="goals">Goals</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="achiement">Achiement</string>
    <string name="timer">Timer</string>
    <string name="edite_moods">Edite Moods</string>
    <string name="edite_activity">Edite Activities</string>
    <string name="change_color">Change Colors</string>
    <string name="color_mode">Color Mode</string>
    <string name="pin_lock">PIN Lock</string>
    <string name="reminder">Reminder</string>
    <string name="start_week">Start of the Week</string>
    <string name="language">Language</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="export_entries">Export Entries</string>
    <string name="widgets">Widgets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">YESTERDAY, MARCH 5</string>
    <string name="time">22:30</string>
    <string name="note">Note</string>
    <string name="continue_text">continue</string>
    <string name="save">save</string>
    <string name="what_have_you_been_up_to">What have you been up to?</string>
    <string name="add_note">Add note</string>
    <string name="photo">Photo</string>
    <string name="tap_to_add_photo">Tap to Add Photo</string>
    <string name="social">social</string>
    <string name="activityItemText">calendar</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="let_s_add_first_entry_tap_the_big_plus_button">Let\'s add first entry!\nTap the big PLUS button</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="create_new_goals">Create New Goal</string>
    <string name="activities">Activities</string>
    <string name="add_activity">Add Activity</string>
    <string name="select_color_mode">Select your Color Mode</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System Default</string>
    <string name="cancel">Cancel</string>

    <!-- fab menu -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="otherDay">Other Day</string>

    <!--stats fragment-->
    <string name="days_in_row">Days In a Row</string>
    <string name="mood_chart">Mood Chart</string>
    <string name="achievements">Achievements</string>
    <string name="mood_count">Mood Count</string>
    <string name="select_activity">Select Activity</string>
    <string name="longest_chain">Longest Chain</string>
    <string name="show_all">Show All</string>
    <string name="first_entry_acheivement">First Entry</string>
    <string name="a_week_with_us">A Week With Us</string>
    <string name="first_note">First Note</string>

    <!--week days for days in a row-->
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>

    <!--calendars-->
    <string name="shamsi_calendar">Persian Calendar</string>
    <string name="shamsi_calendar_short">Persian</string>
    <!-- Used in accessibility, previous day or month or year -->
    <string name="previous_x">Previous %1$s</string>
    <!-- Used in accessibility, next day or month or year -->
    <string name="next_x">Next %1$s</string>
    <string name="month">Month</string>
    <!-- Used in accessibility, describes headers of calendar -->
    <string name="week_days_name_column">%1$s column in days table</string>

    <!--Persian Calendar months-->
    <string name="farvardin">Farvardin</string>
    <string name="ordibehesht">Ordibehesht</string>
    <string name="khordad">Khordad</string>
    <string name="tir">Tir</string>
    <string name="mordad">Mordad</string>
    <string name="shahrivar">Shahrivar</string>
    <string name="mehr">Mehr</string>
    <string name="aban">Aban</string>
    <string name="azar">Azar</string>
    <string name="dey">Dey</string>
    <string name="bahman">Bahman</string>
    <string name="esfand">Esfand</string>

    <!--Week Days-->
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="average_mood">average moods </string>
    <string name="keep">KEEP</string>
    <string name="enter_pin">enter your new pin</string>
    <string name="confirm_pin">confirm your pin</string>
    <string name="error_pin">PIN lock not match</string>
    <string name="not_active_pin_lock">PIN Lock Not Active</string>
    <string name="active_pin_lock">PIN Lock Is Active</string>
    <string name="b1">b1</string>
    <string name="b2">b2</string>
    <string name="dialogMainText">Delete loving memory?</string>
    <string name="dialogSubText">This is your life we are talking about. Do you want to delete a part of it?</string>
    <string name="dialogDeleteText">DELETE</string>
    <string name="dialogCancelText">CANCEL</string>
    <string name="entries">entries</string>
    <string name="statsStr">stats</string>
    <string name="calenderStr">calender</string>
    <string name="moreStr">more</string>
    <string name="galleyTxt">Galley</string>
    <string name="cameraTxt">Camera</string>
    <string name="choose">Choose</string>
    <string name="its_time_to_play_memories">Its time to play memories.</string>
    <string name="it_was_first_entry_lets_make_some_other">It was your first entry\nlets make some history.</string>
    <string name="add_new_entry">Add a new entry!</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_reminder_success">Add Reminder Successed</string>
    <string name="mNot_found">No entry found</string>
    <string name="habits">Habits</string>
    <string name="daily">Daily</string>
    <string name="friends">Friends</string>
    <string name="mDate">Date</string>
    <string name="healthy">Healthy</string>
    <string name="family">Family</string>
    <string name="movie">Movie</string>
    <string name="reading">Reading</string>
    <string name="sport">Sport</string>
    <string name="relax">Relax</string>
    <string name="shopping">Shopping</string>
    <string name="sleep">Sleep</string>
    <string name="cleaning">Cleaning</string>
    <string name="gaming">Gaming</string>
    <string name="mLearn">Learn</string>
    <string name="not_registered">You have not registered anything for today !</string>
    <string name="not_found">not found</string>
    <string name="never_mind">cancel</string>
    <string name="ok">Ok</string>
    <string name="fingerprint_access">Allow Fingerprint Access</string>
    <string name="pinLock_access">Only PIN Lock Access</string>
    <string name="off">off</string>
    <string name="delete_photo">Delete photo?</string>
    <string name="change_photo">Change photo</string>
    <string name="moods">Moods</string>
    <string name="year_in_pixel">Year In Pixel</string>
    <string name="content_description" translatable="false">content description</string>
    <string name="login_with_pinlock">Login PIN Lock</string>
    <string name="login_with_fingerprint">Login Finger Print</string>
    <string name="confirm_fingerPrint">Confirm Finger Print</string>
    <string name="fingerPrint_error">Finger print not match</string>
    <string name="popup_reminder">Display Reminder Pop-Up</string>
    <string name="daily_moods">daily moods</string>
    <string name="delete_reminder">Delete Reminder ?</string>
    <string name="contact_us">Contact us</string>
    <string name="not_reached_today">You have not reached this date yet, replaced today date</string>
    <string name="not_reached_time">You have not reached this time yet, replaced current time</string>
    <string name="not_enough_entries">We need more data to draw this chart!</string>
</resources>
