<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_15mdp"
    android:layout_margin="@dimen/_15mdp">


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70mdp"
        android:background="@color/blue_light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_moon"
        android:background="@drawable/background_ovel"
        android:padding="@dimen/_15mdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30mdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_120mdp"
        android:layout_marginStart="@dimen/_15mdp"
        android:layout_marginEnd="@dimen/_15mdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color_mode"
            android:textColor="?colorText"
            android:textSize="@dimen/_20font_mdp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <RadioGroup
            android:id="@+id/rg_DchangeMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15mdp">

            <RadioButton
                android:id="@+id/rb_DchangeMode_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_mode"
                android:textSize="@dimen/_13font_mdp"/>

            <RadioButton
                android:id="@+id/rb_DchangeMode_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textSize="@dimen/_13font_mdp"/>

            <RadioButton
                android:id="@+id/rb_DchangeMode_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_mode"
                android:textSize="@dimen/_13font_mdp"/>

        </RadioGroup>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_20mdp"
            android:layout_marginBottom="@dimen/_10mdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_DchangeMode_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceBody1"
                style="@style/Widget.Material3.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_DchangeMode_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceBody1"
                style="@style/Widget.Material3.Button.TextButton" />


        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>