<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/item_veryHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                app:srcCompat="@drawable/ic_very_happy_outlined"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/rad"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                app:srcCompat="@drawable/ic_happy_outlined"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/good"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                app:srcCompat="@drawable/ic_nothing_outlined"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/meh"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                app:srcCompat="@drawable/ic_bad_outlined"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/bad"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_verySad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                app:srcCompat="@drawable/ic_very_bad_outlined"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/awful"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>