<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_15mdp"
    android:layout_margin="@dimen/_15mdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_15mdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:textStyle="bold"
            android:layout_gravity="start"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15mdp"
            android:layout_marginStart="@dimen/_10mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:layout_marginBottom="@dimen/_20mdp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Persian"
                android:textSize="@dimen/_13font_mdp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="English"
                android:textSize="@dimen/_13font_mdp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_20mdp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>