<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_6mdp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_60mdp"
        android:layout_height="@dimen/_60mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_emoji_happy" />

    <View
        android:layout_width="@dimen/_2mdp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:background="@color/silver"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/cardHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16mdp"
        android:text="@string/awful"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        android:layout_marginStart="@dimen/_6mdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:text="@string/note"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_150mdp"
        android:layout_height="@dimen/_150mdp"
        app:cardCornerRadius="@dimen/_16mdp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginTop="@dimen/_12mdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="?colorPrimary"/>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:layout_width="@dimen/_25mdp"
        android:layout_height="@dimen/_25mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_outlined"
        app:tint="@color/gray"
        android:layout_margin="@dimen/_12mdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>